src/rtc/parser.output
Grammar

    0 $accept: Program END

    1 Program: NizNaredbi

    2 NizNaredbi: NizNaredbi Naredba
    3           | %empty

    4 Naredba: Pretprocesor
    5        | DefinicijaTipa
    6        | Blok
    7        | Skip
    8        | Test

    9 Pretprocesor: INCLUDE_QT_TEST
   10             | PREPROCESSOR

   11 Blok: OVZAGRADA NizNaredbi ZVZAGRADA

   12 Skip: Id
   13     | TACKAZAPETA
   14     | ZAPETA

   15 DefinicijaTipa: CLASS ID OVZAGRADA NizDeklaracijaUTipu ZVZAGRADA TACKAZAPETA

   16 $@1: %empty

   17 DefinicijaTipa: CLASS ID DVOTACKA NizNasledjivaja OVZAGRADA $@1 NizDeklaracijaUTipu ZVZAGRADA TACKAZAPETA

   18 NizDeklaracijaUTipu: NizNaredbi

   19 $@2: %empty

   20 NizDeklaracijaUTipu: NizDeklaracijaUTipu MODIFIER NizID DVOTACKA $@2 NizNaredbi

   21 $@3: %empty

   22 NizDeklaracijaUTipu: NizDeklaracijaUTipu PRIVATE NizID DVOTACKA $@3 NizNaredbi

   23 $@4: %empty

   24 NizDeklaracijaUTipu: NizDeklaracijaUTipu PRIVATE Q_SLOTS DVOTACKA $@4 NizNaredbi

   25 NizNasledjivaja: NizNasledjivaja ZAPETA MODIFIER Id
   26                | NizNasledjivaja ZAPETA PRIVATE Id
   27                | MODIFIER Id
   28                | PRIVATE Id

   29 Id: Id DVEDVOTACKE ID
   30   | ID

   31 NizID: NizID Id
   32      | %empty

   33 NizArgumenata: NizArgumenata ZAPETA Id
   34              | NizArgumenata Id
   35              | %empty

   36 Test: VOID Id NizArgumenata TACKAZAPETA

   37 $@5: %empty

   38 Test: VOID Id NizArgumenata $@5 Blok


Terminals, with rules where they appear

END (0) 0
error (256)
CLASS (258) 15 17
INCLUDE_QT_TEST (259) 9
PREPROCESSOR (260) 10
MODIFIER (261) 20 25 27
PRIVATE (262) 22 24 26 28
Q_SLOTS (263) 24
OVZAGRADA (264) 11 15 17
ZVZAGRADA (265) 11 15 17
DVOTACKA (266) 17 20 22 24
DVEDVOTACKE (267) 29
ZAPETA (268) 14 25 26 33
TACKAZAPETA (269) 13 15 17 36
VOID (270) 36 38
ID <std::string> (271) 15 17 29 30


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
Program (18)
    on left: 1, on right: 0
NizNaredbi (19)
    on left: 2 3, on right: 1 2 11 18 20 22 24
Naredba (20)
    on left: 4 5 6 7 8, on right: 2
Pretprocesor (21)
    on left: 9 10, on right: 4
Blok (22)
    on left: 11, on right: 6 38
Skip (23)
    on left: 12 13 14, on right: 7
DefinicijaTipa (24)
    on left: 15 17, on right: 5
$@1 (25)
    on left: 16, on right: 17
NizDeklaracijaUTipu (26)
    on left: 18 20 22 24, on right: 15 17 20 22 24
$@2 (27)
    on left: 19, on right: 20
$@3 (28)
    on left: 21, on right: 22
$@4 (29)
    on left: 23, on right: 24
NizNasledjivaja (30)
    on left: 25 26 27 28, on right: 17 25 26
Id <std::string> (31)
    on left: 29 30, on right: 12 25 26 27 28 29 31 33 34 36 38
NizID (32)
    on left: 31 32, on right: 20 22 31
NizArgumenata (33)
    on left: 33 34 35, on right: 33 34 36 38
Test (34)
    on left: 36 38, on right: 8
$@5 (35)
    on left: 37, on right: 38


State 0

    0 $accept: . Program END

    $default  reduce using rule 3 (NizNaredbi)

    Program     go to state 1
    NizNaredbi  go to state 2


State 1

    0 $accept: Program . END

    END  shift, and go to state 3


State 2

    1 Program: NizNaredbi .
    2 NizNaredbi: NizNaredbi . Naredba

    CLASS            shift, and go to state 4
    INCLUDE_QT_TEST  shift, and go to state 5
    PREPROCESSOR     shift, and go to state 6
    OVZAGRADA        shift, and go to state 7
    ZAPETA           shift, and go to state 8
    TACKAZAPETA      shift, and go to state 9
    VOID             shift, and go to state 10
    ID               shift, and go to state 11

    $default  reduce using rule 1 (Program)

    Naredba         go to state 12
    Pretprocesor    go to state 13
    Blok            go to state 14
    Skip            go to state 15
    DefinicijaTipa  go to state 16
    Id              go to state 17
    Test            go to state 18


State 3

    0 $accept: Program END .

    $default  accept


State 4

   15 DefinicijaTipa: CLASS . ID OVZAGRADA NizDeklaracijaUTipu ZVZAGRADA TACKAZAPETA
   17               | CLASS . ID DVOTACKA NizNasledjivaja OVZAGRADA $@1 NizDeklaracijaUTipu ZVZAGRADA TACKAZAPETA

    ID  shift, and go to state 19


State 5

    9 Pretprocesor: INCLUDE_QT_TEST .

    $default  reduce using rule 9 (Pretprocesor)


State 6

   10 Pretprocesor: PREPROCESSOR .

    $default  reduce using rule 10 (Pretprocesor)


State 7

   11 Blok: OVZAGRADA . NizNaredbi ZVZAGRADA

    $default  reduce using rule 3 (NizNaredbi)

    NizNaredbi  go to state 20


State 8

   14 Skip: ZAPETA .

    $default  reduce using rule 14 (Skip)


State 9

   13 Skip: TACKAZAPETA .

    $default  reduce using rule 13 (Skip)


State 10

   36 Test: VOID . Id NizArgumenata TACKAZAPETA
   38     | VOID . Id NizArgumenata $@5 Blok

    ID  shift, and go to state 11

    Id  go to state 21


State 11

   30 Id: ID .

    $default  reduce using rule 30 (Id)


State 12

    2 NizNaredbi: NizNaredbi Naredba .

    $default  reduce using rule 2 (NizNaredbi)


State 13

    4 Naredba: Pretprocesor .

    $default  reduce using rule 4 (Naredba)


State 14

    6 Naredba: Blok .

    $default  reduce using rule 6 (Naredba)


State 15

    7 Naredba: Skip .

    $default  reduce using rule 7 (Naredba)


State 16

    5 Naredba: DefinicijaTipa .

    $default  reduce using rule 5 (Naredba)


State 17

   12 Skip: Id .
   29 Id: Id . DVEDVOTACKE ID

    DVEDVOTACKE  shift, and go to state 22

    $default  reduce using rule 12 (Skip)


State 18

    8 Naredba: Test .

    $default  reduce using rule 8 (Naredba)


State 19

   15 DefinicijaTipa: CLASS ID . OVZAGRADA NizDeklaracijaUTipu ZVZAGRADA TACKAZAPETA
   17               | CLASS ID . DVOTACKA NizNasledjivaja OVZAGRADA $@1 NizDeklaracijaUTipu ZVZAGRADA TACKAZAPETA

    OVZAGRADA  shift, and go to state 23
    DVOTACKA   shift, and go to state 24


State 20

    2 NizNaredbi: NizNaredbi . Naredba
   11 Blok: OVZAGRADA NizNaredbi . ZVZAGRADA

    CLASS            shift, and go to state 4
    INCLUDE_QT_TEST  shift, and go to state 5
    PREPROCESSOR     shift, and go to state 6
    OVZAGRADA        shift, and go to state 7
    ZVZAGRADA        shift, and go to state 25
    ZAPETA           shift, and go to state 8
    TACKAZAPETA      shift, and go to state 9
    VOID             shift, and go to state 10
    ID               shift, and go to state 11

    Naredba         go to state 12
    Pretprocesor    go to state 13
    Blok            go to state 14
    Skip            go to state 15
    DefinicijaTipa  go to state 16
    Id              go to state 17
    Test            go to state 18


State 21

   29 Id: Id . DVEDVOTACKE ID
   36 Test: VOID Id . NizArgumenata TACKAZAPETA
   38     | VOID Id . NizArgumenata $@5 Blok

    DVEDVOTACKE  shift, and go to state 22

    $default  reduce using rule 35 (NizArgumenata)

    NizArgumenata  go to state 26


State 22

   29 Id: Id DVEDVOTACKE . ID

    ID  shift, and go to state 27


State 23

   15 DefinicijaTipa: CLASS ID OVZAGRADA . NizDeklaracijaUTipu ZVZAGRADA TACKAZAPETA

    $default  reduce using rule 3 (NizNaredbi)

    NizNaredbi           go to state 28
    NizDeklaracijaUTipu  go to state 29


State 24

   17 DefinicijaTipa: CLASS ID DVOTACKA . NizNasledjivaja OVZAGRADA $@1 NizDeklaracijaUTipu ZVZAGRADA TACKAZAPETA

    MODIFIER  shift, and go to state 30
    PRIVATE   shift, and go to state 31

    NizNasledjivaja  go to state 32


State 25

   11 Blok: OVZAGRADA NizNaredbi ZVZAGRADA .

    $default  reduce using rule 11 (Blok)


State 26

   33 NizArgumenata: NizArgumenata . ZAPETA Id
   34              | NizArgumenata . Id
   36 Test: VOID Id NizArgumenata . TACKAZAPETA
   38     | VOID Id NizArgumenata . $@5 Blok

    ZAPETA       shift, and go to state 33
    TACKAZAPETA  shift, and go to state 34
    ID           shift, and go to state 11

    $default  reduce using rule 37 ($@5)

    Id   go to state 35
    $@5  go to state 36


State 27

   29 Id: Id DVEDVOTACKE ID .

    $default  reduce using rule 29 (Id)


State 28

    2 NizNaredbi: NizNaredbi . Naredba
   18 NizDeklaracijaUTipu: NizNaredbi .

    CLASS            shift, and go to state 4
    INCLUDE_QT_TEST  shift, and go to state 5
    PREPROCESSOR     shift, and go to state 6
    OVZAGRADA        shift, and go to state 7
    ZAPETA           shift, and go to state 8
    TACKAZAPETA      shift, and go to state 9
    VOID             shift, and go to state 10
    ID               shift, and go to state 11

    $default  reduce using rule 18 (NizDeklaracijaUTipu)

    Naredba         go to state 12
    Pretprocesor    go to state 13
    Blok            go to state 14
    Skip            go to state 15
    DefinicijaTipa  go to state 16
    Id              go to state 17
    Test            go to state 18


State 29

   15 DefinicijaTipa: CLASS ID OVZAGRADA NizDeklaracijaUTipu . ZVZAGRADA TACKAZAPETA
   20 NizDeklaracijaUTipu: NizDeklaracijaUTipu . MODIFIER NizID DVOTACKA $@2 NizNaredbi
   22                    | NizDeklaracijaUTipu . PRIVATE NizID DVOTACKA $@3 NizNaredbi
   24                    | NizDeklaracijaUTipu . PRIVATE Q_SLOTS DVOTACKA $@4 NizNaredbi

    MODIFIER   shift, and go to state 37
    PRIVATE    shift, and go to state 38
    ZVZAGRADA  shift, and go to state 39


State 30

   27 NizNasledjivaja: MODIFIER . Id

    ID  shift, and go to state 11

    Id  go to state 40


State 31

   28 NizNasledjivaja: PRIVATE . Id

    ID  shift, and go to state 11

    Id  go to state 41


State 32

   17 DefinicijaTipa: CLASS ID DVOTACKA NizNasledjivaja . OVZAGRADA $@1 NizDeklaracijaUTipu ZVZAGRADA TACKAZAPETA
   25 NizNasledjivaja: NizNasledjivaja . ZAPETA MODIFIER Id
   26                | NizNasledjivaja . ZAPETA PRIVATE Id

    OVZAGRADA  shift, and go to state 42
    ZAPETA     shift, and go to state 43


State 33

   33 NizArgumenata: NizArgumenata ZAPETA . Id

    ID  shift, and go to state 11

    Id  go to state 44


State 34

   36 Test: VOID Id NizArgumenata TACKAZAPETA .

    $default  reduce using rule 36 (Test)


State 35

   29 Id: Id . DVEDVOTACKE ID
   34 NizArgumenata: NizArgumenata Id .

    DVEDVOTACKE  shift, and go to state 22

    $default  reduce using rule 34 (NizArgumenata)


State 36

   38 Test: VOID Id NizArgumenata $@5 . Blok

    OVZAGRADA  shift, and go to state 7

    Blok  go to state 45


State 37

   20 NizDeklaracijaUTipu: NizDeklaracijaUTipu MODIFIER . NizID DVOTACKA $@2 NizNaredbi

    $default  reduce using rule 32 (NizID)

    NizID  go to state 46


State 38

   22 NizDeklaracijaUTipu: NizDeklaracijaUTipu PRIVATE . NizID DVOTACKA $@3 NizNaredbi
   24                    | NizDeklaracijaUTipu PRIVATE . Q_SLOTS DVOTACKA $@4 NizNaredbi

    Q_SLOTS  shift, and go to state 47

    $default  reduce using rule 32 (NizID)

    NizID  go to state 48


State 39

   15 DefinicijaTipa: CLASS ID OVZAGRADA NizDeklaracijaUTipu ZVZAGRADA . TACKAZAPETA

    TACKAZAPETA  shift, and go to state 49


State 40

   27 NizNasledjivaja: MODIFIER Id .
   29 Id: Id . DVEDVOTACKE ID

    DVEDVOTACKE  shift, and go to state 22

    $default  reduce using rule 27 (NizNasledjivaja)


State 41

   28 NizNasledjivaja: PRIVATE Id .
   29 Id: Id . DVEDVOTACKE ID

    DVEDVOTACKE  shift, and go to state 22

    $default  reduce using rule 28 (NizNasledjivaja)


State 42

   17 DefinicijaTipa: CLASS ID DVOTACKA NizNasledjivaja OVZAGRADA . $@1 NizDeklaracijaUTipu ZVZAGRADA TACKAZAPETA

    $default  reduce using rule 16 ($@1)

    $@1  go to state 50


State 43

   25 NizNasledjivaja: NizNasledjivaja ZAPETA . MODIFIER Id
   26                | NizNasledjivaja ZAPETA . PRIVATE Id

    MODIFIER  shift, and go to state 51
    PRIVATE   shift, and go to state 52


State 44

   29 Id: Id . DVEDVOTACKE ID
   33 NizArgumenata: NizArgumenata ZAPETA Id .

    DVEDVOTACKE  shift, and go to state 22

    $default  reduce using rule 33 (NizArgumenata)


State 45

   38 Test: VOID Id NizArgumenata $@5 Blok .

    $default  reduce using rule 38 (Test)


State 46

   20 NizDeklaracijaUTipu: NizDeklaracijaUTipu MODIFIER NizID . DVOTACKA $@2 NizNaredbi
   31 NizID: NizID . Id

    DVOTACKA  shift, and go to state 53
    ID        shift, and go to state 11

    Id  go to state 54


State 47

   24 NizDeklaracijaUTipu: NizDeklaracijaUTipu PRIVATE Q_SLOTS . DVOTACKA $@4 NizNaredbi

    DVOTACKA  shift, and go to state 55


State 48

   22 NizDeklaracijaUTipu: NizDeklaracijaUTipu PRIVATE NizID . DVOTACKA $@3 NizNaredbi
   31 NizID: NizID . Id

    DVOTACKA  shift, and go to state 56
    ID        shift, and go to state 11

    Id  go to state 54


State 49

   15 DefinicijaTipa: CLASS ID OVZAGRADA NizDeklaracijaUTipu ZVZAGRADA TACKAZAPETA .

    $default  reduce using rule 15 (DefinicijaTipa)


State 50

   17 DefinicijaTipa: CLASS ID DVOTACKA NizNasledjivaja OVZAGRADA $@1 . NizDeklaracijaUTipu ZVZAGRADA TACKAZAPETA

    $default  reduce using rule 3 (NizNaredbi)

    NizNaredbi           go to state 28
    NizDeklaracijaUTipu  go to state 57


State 51

   25 NizNasledjivaja: NizNasledjivaja ZAPETA MODIFIER . Id

    ID  shift, and go to state 11

    Id  go to state 58


State 52

   26 NizNasledjivaja: NizNasledjivaja ZAPETA PRIVATE . Id

    ID  shift, and go to state 11

    Id  go to state 59


State 53

   20 NizDeklaracijaUTipu: NizDeklaracijaUTipu MODIFIER NizID DVOTACKA . $@2 NizNaredbi

    $default  reduce using rule 19 ($@2)

    $@2  go to state 60


State 54

   29 Id: Id . DVEDVOTACKE ID
   31 NizID: NizID Id .

    DVEDVOTACKE  shift, and go to state 22

    $default  reduce using rule 31 (NizID)


State 55

   24 NizDeklaracijaUTipu: NizDeklaracijaUTipu PRIVATE Q_SLOTS DVOTACKA . $@4 NizNaredbi

    $default  reduce using rule 23 ($@4)

    $@4  go to state 61


State 56

   22 NizDeklaracijaUTipu: NizDeklaracijaUTipu PRIVATE NizID DVOTACKA . $@3 NizNaredbi

    $default  reduce using rule 21 ($@3)

    $@3  go to state 62


State 57

   17 DefinicijaTipa: CLASS ID DVOTACKA NizNasledjivaja OVZAGRADA $@1 NizDeklaracijaUTipu . ZVZAGRADA TACKAZAPETA
   20 NizDeklaracijaUTipu: NizDeklaracijaUTipu . MODIFIER NizID DVOTACKA $@2 NizNaredbi
   22                    | NizDeklaracijaUTipu . PRIVATE NizID DVOTACKA $@3 NizNaredbi
   24                    | NizDeklaracijaUTipu . PRIVATE Q_SLOTS DVOTACKA $@4 NizNaredbi

    MODIFIER   shift, and go to state 37
    PRIVATE    shift, and go to state 38
    ZVZAGRADA  shift, and go to state 63


State 58

   25 NizNasledjivaja: NizNasledjivaja ZAPETA MODIFIER Id .
   29 Id: Id . DVEDVOTACKE ID

    DVEDVOTACKE  shift, and go to state 22

    $default  reduce using rule 25 (NizNasledjivaja)


State 59

   26 NizNasledjivaja: NizNasledjivaja ZAPETA PRIVATE Id .
   29 Id: Id . DVEDVOTACKE ID

    DVEDVOTACKE  shift, and go to state 22

    $default  reduce using rule 26 (NizNasledjivaja)


State 60

   20 NizDeklaracijaUTipu: NizDeklaracijaUTipu MODIFIER NizID DVOTACKA $@2 . NizNaredbi

    $default  reduce using rule 3 (NizNaredbi)

    NizNaredbi  go to state 64


State 61

   24 NizDeklaracijaUTipu: NizDeklaracijaUTipu PRIVATE Q_SLOTS DVOTACKA $@4 . NizNaredbi

    $default  reduce using rule 3 (NizNaredbi)

    NizNaredbi  go to state 65


State 62

   22 NizDeklaracijaUTipu: NizDeklaracijaUTipu PRIVATE NizID DVOTACKA $@3 . NizNaredbi

    $default  reduce using rule 3 (NizNaredbi)

    NizNaredbi  go to state 66


State 63

   17 DefinicijaTipa: CLASS ID DVOTACKA NizNasledjivaja OVZAGRADA $@1 NizDeklaracijaUTipu ZVZAGRADA . TACKAZAPETA

    TACKAZAPETA  shift, and go to state 67


State 64

    2 NizNaredbi: NizNaredbi . Naredba
   20 NizDeklaracijaUTipu: NizDeklaracijaUTipu MODIFIER NizID DVOTACKA $@2 NizNaredbi .

    CLASS            shift, and go to state 4
    INCLUDE_QT_TEST  shift, and go to state 5
    PREPROCESSOR     shift, and go to state 6
    OVZAGRADA        shift, and go to state 7
    ZAPETA           shift, and go to state 8
    TACKAZAPETA      shift, and go to state 9
    VOID             shift, and go to state 10
    ID               shift, and go to state 11

    $default  reduce using rule 20 (NizDeklaracijaUTipu)

    Naredba         go to state 12
    Pretprocesor    go to state 13
    Blok            go to state 14
    Skip            go to state 15
    DefinicijaTipa  go to state 16
    Id              go to state 17
    Test            go to state 18


State 65

    2 NizNaredbi: NizNaredbi . Naredba
   24 NizDeklaracijaUTipu: NizDeklaracijaUTipu PRIVATE Q_SLOTS DVOTACKA $@4 NizNaredbi .

    CLASS            shift, and go to state 4
    INCLUDE_QT_TEST  shift, and go to state 5
    PREPROCESSOR     shift, and go to state 6
    OVZAGRADA        shift, and go to state 7
    ZAPETA           shift, and go to state 8
    TACKAZAPETA      shift, and go to state 9
    VOID             shift, and go to state 10
    ID               shift, and go to state 11

    $default  reduce using rule 24 (NizDeklaracijaUTipu)

    Naredba         go to state 12
    Pretprocesor    go to state 13
    Blok            go to state 14
    Skip            go to state 15
    DefinicijaTipa  go to state 16
    Id              go to state 17
    Test            go to state 18


State 66

    2 NizNaredbi: NizNaredbi . Naredba
   22 NizDeklaracijaUTipu: NizDeklaracijaUTipu PRIVATE NizID DVOTACKA $@3 NizNaredbi .

    CLASS            shift, and go to state 4
    INCLUDE_QT_TEST  shift, and go to state 5
    PREPROCESSOR     shift, and go to state 6
    OVZAGRADA        shift, and go to state 7
    ZAPETA           shift, and go to state 8
    TACKAZAPETA      shift, and go to state 9
    VOID             shift, and go to state 10
    ID               shift, and go to state 11

    $default  reduce using rule 22 (NizDeklaracijaUTipu)

    Naredba         go to state 12
    Pretprocesor    go to state 13
    Blok            go to state 14
    Skip            go to state 15
    DefinicijaTipa  go to state 16
    Id              go to state 17
    Test            go to state 18


State 67

   17 DefinicijaTipa: CLASS ID DVOTACKA NizNasledjivaja OVZAGRADA $@1 NizDeklaracijaUTipu ZVZAGRADA TACKAZAPETA .

    $default  reduce using rule 17 (DefinicijaTipa)
